--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="social-list">
           <a href="" class="icon ion-social-twitter"></a>
           <a href="" class="icon ion-social-facebook"></a>
-          <a href="" class="icon ion-social-googleplus"></a>
-          <a href="" class="icon ion-social-linkedin"></a>
-          <a href="" class="icon ion-social-dribbble-outline"></a>
+          <a href="https://www.instagram.com/akbarharii/" class="icon ion-social-instagram"></a>
+          <a href="https://www.linkedin.com/in/akbarharii/" class="icon ion-social-linkedin"></a>
+          <a href="https://dribbble.com/akbarharii" class="icon ion-social-dribbble-outline"></a>
         </div>
         <div class="copy">© Akbar 2022. All Rights Reseverd</div>
       </div>
@@ -97,11 +97,11 @@
     </header>
     <div class="copy-bottom white boxed">© Akbar 2022.</div>
     <div class="social-list social-list-bottom boxed">
-        <a href="" class="icon ion-social-twitter"></a>
-        <a href="" class="icon ion-social-facebook"></a>
-        <a href="" class="icon ion-social-googleplus"></a>
-        <a href="" class="icon ion-social-linkedin"></a>
-        <a href="" class="icon ion-social-dribbble-outline"></a>
+        <a href="" class="icon ion-social-uplabs"></a>
+        <a href="" class="icon ion-social-behance"></a>
+        <a href="https://www.instagram.com/akbarharii/" class="icon ion-social-instagram"></a>
+        <a href="https://www.linkedin.com/in/akbarharii/" class="icon ion-social-linkedin"></a>
+        <a href="https://dribbble.com/akbarharii" class="icon ion-social-dribbble-outline"></a>
       </div>
     <div class="pagepiling">
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
@@ -140,7 +140,7 @@
                       <div class="row-specialization row">
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-laptop-phone"></span>
-                          <h4 class="text-uppercase">Mobile Design</h4>
+                          <h4 class="text-uppercase">UX/UI Design</h4>
                           <p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
@@ -150,7 +150,7 @@
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-diamond2"></span>
-                          <h4 class="text-uppercase">Illustration</h4>
+                          <h4 class="text-uppercase">Graphic Design</h4>
                           <p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
                         </div>
                       </div>
@@ -184,8 +184,8 @@
                             <div class="resume-content">
                               <div class="resume-inner">
                                 <div class="resume-row">
-                                  <h6 class="resume-type">Specialization course</h6>
-                                  <i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
+                                  <h6 class="resume-type">Informatics</h6>
+                                  <i class="resume-study">University of Amikom Yogyakarta, Indonesia<br>Jun 2017 - Dec 2021</i>
                                   <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
                                 </div>
                                 <div class="resume-row">
@@ -203,13 +203,13 @@
                             <div class="resume-content">
                               <div class="resume-inner">
                                 <div class="resume-row">
-                                  <h6 class="resume-type">WEBDESIGNER & FRONT-END</h6>
-                                  <i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
+                                  <h6 class="resume-type">UX/UI Designer</h6>
+                                  <i class="resume-study">LideDev Community<br>Nov 2019 - Dec 2021</i>
                                   <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
                                 </div>
                                 <div class="resume-row">
-                                  <h6 class="resume-type">WORDPRESS DEVELOPER</h6>
-                                  <i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
+                                  <h6 class="resume-type">UI Designer</h6>
+                                  <i class="resume-study">Harisenin.com<br>Jan 2022 - Mar 2022</i>
                                   <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
                                 </div>
                               </div>
@@ -239,7 +239,7 @@
                         <div class="col-lg-6 offset-xl-1">
                           <div class="experience-box">
                             <div class="experience-content">
-                              <div class="experience-number">4</div>
+                              <div class="experience-number">3</div>
                               <div class="experience-info"><div>Years<br>Experience<br>Working</div></div>
                             </div>
                           </div>
@@ -249,7 +249,7 @@
                           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta sit pariatur odio unde deleniti eveniet.
                           <div class="progress-bars">
                             <div class="clearfix">
-                              <div class="number float-left">Mobile Design</div>
+                              <div class="number float-left">UX/UI Design</div>
                               <div class="number float-right">80%</div>
                             </div>
                             <div class="progress">
@@ -259,7 +259,7 @@
                             </div>
                             <div class="clearfix">
                               <div class="number float-left">Coding</div>
-                              <div class="number float-right">70%</div>
+                              <div class="number float-right">50%</div>
                             </div>
                             <div class="progress">
                               <div class="progress-bar-wrp">
@@ -267,7 +267,7 @@
                               </div>
                             </div>
                             <div class="clearfix">
-                              <div class="number float-left">Illustration</div>
+                              <div class="number float-left">Graphic Deisgn</div>
                               <div class="number float-right">70%</div>
                             </div>
                             <div class="progress">
@@ -306,29 +306,29 @@
                           <div class="project-row">
                             <a class="active" href="project-detail.html">
                               <span class="project-number">01</span>
-                              <h2 class="project-title">Abstract Skat</h2>
-                              <div class="project-category">Illustration</div>
+                              <h2 class="project-title">Laron (Laris Online)</h2>
+                              <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
                             <a href="project-detail.html">
                               <span class="project-number">02</span>
-                              <h2 class="project-title">Borato Prism</h2>
-                              <div class="project-category">Branding</div>
+                              <h2 class="project-title">Si-Pus</h2>
+                              <div class="project-category">UI/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
                             <a href="project-detail.html">
                               <span class="project-number">03</span>
-                              <h2 class="project-title">Brole Mobile App</h2>
-                              <div class="project-category">Mobile Design</div>
+                              <h2 class="project-title">Story Of Nature Spirit</h2>
+                              <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="project-row">
                             <a href="project-detail.html">
                               <span class="project-number">04</span>
-                              <h2 class="project-title">Bauhaus Studio</h2>
-                              <div class="project-category">House Design</div>
+                              <h2 class="project-title">Expense Manager App</h2>
+                              <div class="project-category">UX/UI Design</div>
                             </a>
                           </div>
                           <div class="view-all view-all-projects">
@@ -358,18 +358,18 @@
                        <h2 class="title text-white"><span class="text-primary">Trusted</span> from Clients</h2>
                       <div class="row row-partners">
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/1.png"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/2.png"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/3.png"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/4.png"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
                         </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
+                        <!-- <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
                           <div class="partner-inner"><img alt="" src="images/partners/5.png"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
@@ -392,7 +392,7 @@
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
                           <div class="partner-inner"><img alt="" src="images/partners/12.png"></div>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </div>
@@ -419,8 +419,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">David & Elisa</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Herlandro Tribiakto</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
@@ -432,8 +432,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">Amanda</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Rhaka Novyansyah</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
@@ -447,8 +447,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">David & Elisa</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Herlandro Tribiakto</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
@@ -460,8 +460,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">Amanda</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Rhaka Novyansyah</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
@@ -475,8 +475,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">David & Elisa</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Herlandro Tribiakto</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
@@ -488,8 +488,8 @@
                             <div class="row">
                               <div class="col-md-5">
                                 <div class="review-author">
-                                  <div class="author-name">Amanda</div>
-                                  <i>Apartment view lake at Brooklyn</i>
+                                  <div class="author-name">Rhaka Novyansyah</div>
+                                  <i>Indonesia</i>
                                 </div>
                               </div>
                               <div class="col-md-7 text">
