Update Detail Information

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="intro">
                       <div class="row">
                         <div class="col-md-8 col-lg-6">
-                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Hello!,</span> I'm Akbar</h1>
+                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Hello,</span> I'm Akbar</h1>
                           <a class="popup-youtube"  href="#"><span class="icon ion-ios-play"></span>Watch video </a>
                         </div>
                       </div>
@@ -141,17 +141,17 @@
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-laptop-phone"></span>
                           <h4 class="text-uppercase">UX/UI Design</h4>
-                          <p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
+                          <p>I am a Creative UX/UI Designer with more than 2 years facilitating and supporting human interactions with complex systems and software.</p>
+                        </div>
+                        <div class="col-specialization col-md-6 col-lg-4">
+                          <span class="icon-specialization icon-diamond2"></span>
+                          <h4 class="text-uppercase">Graphic Design</h4>
+                          <p>I help develop client ideas and visualize them into a design so that the client's goals are achieved, I also like to create logo designs.</p>
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-smartphone-embed"></span>
                           <h4 class="text-uppercase">Coding</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum fuga dicta voluptatum hic aut aspernatur magnam voluptates itaque atque quae laudantium, tempora at.</p>
-                        </div>
-                        <div class="col-specialization col-md-6 col-lg-4">
-                          <span class="icon-specialization icon-diamond2"></span>
-                          <h4 class="text-uppercase">Graphic Design</h4>
-                          <p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
                         </div>
                       </div>
                       <div class="view-all">
@@ -186,12 +186,12 @@
                                 <div class="resume-row">
                                   <h6 class="resume-type">Bachelor Degree</h6>
                                   <i class="resume-study">University of Amikom Yogyakarta, Indonesia<br>Jun 2017 - Dec 2021</i>
-                                  <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+                                  <p class="resume-text">I have completed my bachelor's degree at Amikom University Yogyakarta for 4 years, I majored in informatics and focused on programming, I have been equipped with knowledge to develop a system from analysis, design, development, testing, and maintenance.</p>
                                 </div>
                                 <div class="resume-row">
                                   <h6 class="resume-type"> Vocational High School</h6>
                                   <i class="resume-study">SMK N 3 Yogyakarta, Indonesia<br>Jun 2013 - Mar 2016</i>
-                                  <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim </p>
+                                  <p class="resume-text">I studied at smk n 3 yogyakarta for 3 years, I majored in mechanical engineering. </p>
                                 </div>
                               </div>
                             </div>
@@ -205,12 +205,12 @@
                                 <div class="resume-row">
                                   <h6 class="resume-type">UX/UI Designer</h6>
                                   <i class="resume-study">LideDev Community<br>Nov 2019 - Dec 2021</i>
-                                  <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+                                  <p class="resume-text">LideDev Community is a developer team that I built when I was in college with my classmates. We have worked on quite a number of projects from small projects to large projects. In this team, my main job is as a UX/UI Designer and Graphic Designer, my job is to translate ideas from clients into a project brief, after that I make analysis of users and competitors, create wireframes, mockups and prototypes.</p>
                                 </div>
                                 <div class="resume-row">
                                   <h6 class="resume-type">UI Designer</h6>
                                   <i class="resume-study">Harisenin.com<br>Jan 2022 - Mar 2022</i>
-                                  <p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+                                  <p class="resume-text">At Harisenin.com I worked as an internship UI Designer, and I learned many things such as teamwork, time discipline, and how to work professionally. At Harisenin.com I do a lot of design projects for Harisenin.com products. In my work I use a lot of techniques that I learned, such as using grids, components, variants and making responsive designs.</p>
                                 </div>
                               </div>
                             </div>
@@ -245,8 +245,8 @@
                           </div>
                         </div>
                         <div class="col-lg-5 mt-5 mt-xl-0">
-                          <h2 class="title"> <span class="text-primary">The best</span> websites</h2>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta sit pariatur odio unde deleniti eveniet.
+                          <h2 class="title"> <span class="text-primary">My</span> Experience</h2>
+                          I have completed several projects from when I was freelance and when I did an internship at a startup
                           <div class="progress-bars">
                             <div class="clearfix">
                               <div class="number float-left">UX/UI Design</div>
@@ -258,8 +258,8 @@
                               </div>
                             </div>
                             <div class="clearfix">
-                              <div class="number float-left">Coding</div>
-                              <div class="number float-right">50%</div>
+                              <div class="number float-left">Graphic Deisgn</div>
+                              <div class="number float-right">70%</div>
                             </div>
                             <div class="progress">
                               <div class="progress-bar-wrp">
@@ -267,12 +267,12 @@
                               </div>
                             </div>
                             <div class="clearfix">
-                              <div class="number float-left">Graphic Deisgn</div>
-                              <div class="number float-right">70%</div>
+                              <div class="number float-left">Coding</div>
+                              <div class="number float-right">50%</div>
                             </div>
                             <div class="progress">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
                           </div>
