--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                 </div>
                               </div>
                               <div class="col-md-7 text">
-                              <p>If you are seeking an Interior designer that will understand exactly your needs, and someone who will utilise their creative and technical skills in parity with your taste, then Suzanne at The Ramsay Studio is perfect.</p>
+                              <p>As the co-founder of the Lide-Dev Community and a comrade in arms on campus, this horse breed has high determination and responsibility. Any challenges will be solved together with good results. Sometimes I ask him for UI suggestions and the results are satisfactory.</p>
                               </div>
                             </div>
                           </div>
