--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i&display=swap" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" media="screen">
+
+<!-- Font Awesome -->
+<script defer src="js/all.min.js"></script>
 </head>
 <body>
   <div class="animsition">   
@@ -56,11 +59,11 @@
       </ul>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="" class="icon ion-social-twitter"></a>
-          <a href="" class="icon ion-social-facebook"></a>
-          <a href="https://www.instagram.com/akbarharii/" class="icon ion-social-instagram"></a>
-          <a href="https://www.linkedin.com/in/akbarharii/" class="icon ion-social-linkedin"></a>
-          <a href="https://dribbble.com/akbarharii" class="icon ion-social-dribbble-outline"></a>
+          <a href="" class="icon"><i class="fa-brands fa-behance-square"></i></a>
+          <a href="" class="icon"><i class="fa-brands fa-facebook-square"></i></a>
+          <a href="https://www.instagram.com/akbarharii/" class="icon"><i class="fa-brands fa-instagram-square"></i></a>
+          <a href="https://www.linkedin.com/in/akbarharii/" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://dribbble.com/akbarharii" class="icon"><i class="fa-brands fa-dribbble-square"></i></a>
         </div>
         <div class="copy">© Akbar 2022. All Rights Reseverd</div>
       </div>
@@ -97,11 +100,11 @@
     </header>
     <div class="copy-bottom white boxed">© Akbar 2022.</div>
     <div class="social-list social-list-bottom boxed">
-        <a href="" class="icon ion-social-uplabs"></a>
-        <a href="" class="icon ion-social-behance"></a>
-        <a href="https://www.instagram.com/akbarharii/" class="icon ion-social-instagram"></a>
-        <a href="https://www.linkedin.com/in/akbarharii/" class="icon ion-social-linkedin"></a>
-        <a href="https://dribbble.com/akbarharii" class="icon ion-social-dribbble-outline"></a>
+      <a href="https://www.behance.net/akbarharii" class="icon"><i class="fa-brands fa-behance-square"></i></a>
+      <a href="" class="icon"><i class="fa-brands fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/akbarharii/" class="icon"><i class="fa-brands fa-instagram-square"></i></a>
+      <a href="https://www.linkedin.com/in/akbarharii/" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://dribbble.com/akbarharii" class="icon"><i class="fa-brands fa-dribbble-square"></i></a>
       </div>
     <div class="pagepiling">
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
