--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
                       <h2 class="title mb-5 pb-5"> <span class="text-primary">My</span> specialization</h2>
                       <div class="row-specialization row">
                         <div class="col-specialization col-md-6 col-lg-4">
-                          <span class="icon-specialization icon-laptop-phone"></span>
+                          <span class="icon-specialization"><i class="fa-brands fa-figma"></i></span>
                           <h4 class="text-uppercase">UX/UI Design</h4>
                           <p>I am a Creative UX/UI Designer with more than 2 years facilitating and supporting human interactions with complex systems and software.</p>
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
-                          <span class="icon-specialization icon-diamond2"></span>
+                          <span class="icon-specialization"><i class="fa-solid fa-bezier-curve"></i></span>
                           <h4 class="text-uppercase">Graphic Design</h4>
                           <p>I help develop client ideas and visualize them into a design so that the client's goals are achieved, I also like to create logo designs.</p>
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
-                          <span class="icon-specialization icon-smartphone-embed"></span>
+                          <span class="icon-specialization"><i class="fa-solid fa-code"></i></span>
                           <h4 class="text-uppercase">Coding</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum fuga dicta voluptatum hic aut aspernatur magnam voluptates itaque atque quae laudantium, tempora at.</p>
                         </div>
@@ -352,39 +352,39 @@
       <div data-anchor="page6" class="pp-scrollable section section-6">
         <div class="scroll-wrap">
           <div class="scrollable-content">
-            <div class="vertical-title text-white d-none d-lg-block"><span>partners</span></div>
+            <div class="vertical-title text-white d-none d-lg-block"><span>Design</span></div>
             <div class="vertical-centred">
               <div class="boxed boxed-inner">
                 <div class="boxed">
                   <div class="container">
                     <div class="intro">
-                       <h2 class="title text-white"><span class="text-primary">Trusted</span> from Clients</h2>
+                       <h2 class="title text-white"><span class="text-primary">Gallery</span> UI Design</h2>
                       <div class="row row-partners">
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/g1.png"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/g2.png"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/g3.png"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/lide1.svg"></div>
+                          <div class="partner-inner"><img alt="" src="images/partners/g4.png"></div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
+                          <div class="partner-inner"><img alt="" src="images/partners/g5.png"></div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
+                          <div class="partner-inner"><img alt="" src="images/partners/g6.png"></div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
+                          <div class="partner-inner"><img alt="" src="images/partners/g7.png"></div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
+                          <div class="partner-inner"><img alt="" src="images/partners/g8.png"></div>
                         </div>
                         <!-- <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/5.png"></div>
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/6.png"></div>
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/7.png"></div>
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
-                          <div class="partner-inner"><img alt="" src="images/partners/8.png"></div>
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
                           <div class="partner-inner"><img alt="" src="images/partners/9.png"></div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-xl-3 col-partner">
