--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+<title>Akbar Hari UX/UI Designer</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="ui/ux designer">
+<meta name="author" content="akbar hari">
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="akbar_32.svg">
 <link rel="apple-touch-icon" href="akbar_32.svg">
 <link rel="apple-touch-icon" sizes="72x72" href="akbar_72.svg">
 <link rel="apple-touch-icon" sizes="114x114" href="akbar_114.svg">
-
-<title>Akbar Hari</title> 
 
 <!-- Styles -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
@@ -76,7 +75,7 @@
       <a class="brand" href="#">
         <img alt="" src="images/logoakbar.png">
         <div class="brand-info">
-          <div class="brand-name">Akbar Hari</div>
+          <div class="brand-name">Akbar Hari - UX/UI Designer</div>
         </div>
       </a>
 
@@ -253,11 +252,11 @@
                           <div class="progress-bars">
                             <div class="clearfix">
                               <div class="number float-left">UX/UI Design</div>
-                              <div class="number float-right">80%</div>
+                              <div class="number float-right">90%</div>
                             </div>
                             <div class="progress">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
                             <div class="clearfix">
@@ -271,11 +270,11 @@
                             </div>
                             <div class="clearfix">
                               <div class="number float-left">Coding</div>
-                              <div class="number float-right">50%</div>
+                              <div class="number float-right">40%</div>
                             </div>
                             <div class="progress">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
                           </div>
