--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a href="https://www.linkedin.com/in/akbarharii/" class="icon"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://dribbble.com/akbarharii" class="icon"><i class="fa-brands fa-dribbble-square"></i></a>
         </div>
-        <div class="copy">© Akbar 2022. All Rights Reseverd</div>
+        <div class="copy">© Akbar 2024. All Rights Reseverd</div>
       </div>
     </div>
 
@@ -97,7 +97,7 @@
         </div>
       </div>
     </header>
-    <div class="copy-bottom white boxed">© Akbar 2022.</div>
+    <div class="copy-bottom white boxed">© Akbar 2024.</div>
     <div class="social-list social-list-bottom boxed">
       <a href="https://www.behance.net/akbarharii" class="icon"><i class="fa-brands fa-behance-square"></i></a>
       <a href="" class="icon"><i class="fa-brands fa-facebook-square"></i></a>
@@ -157,7 +157,7 @@
                         </div>
                       </div>
                       <div class="view-all">
-                        <a href="https://drive.google.com/drive/folders/1n0k4avfBiwFqoLBgl-G2zwpP8s20SXXP?usp=sharing">
+                        <a href="https://drive.google.com/file/d/1mU1UmX2IqF0rhocK2cmVyxM1BvPPZy9f/view?usp=sharing">
                           Download resume
                         </a>
                       </div>
@@ -206,13 +206,24 @@
                               <div class="resume-inner">
                                 <div class="resume-row">
                                   <h6 class="resume-type">UX/UI Designer</h6>
-                                  <i class="resume-study">LideDev Community<br>Nov 2019 - Dec 2021</i>
-                                  <p class="resume-text">LideDev Community is a developer team that I built when I was in college with my classmates. We have worked on quite a number of projects from small projects to large projects. In this team, my main job is as a UX/UI Designer and Graphic Designer, my job is to translate ideas from clients into a project brief, after that I make analysis of users and competitors, create wireframes, mockups and prototypes.</p>
+                                  <i class="resume-study">PT Solusi Kampus Indonesia<br>May 2023 - Now</i>
+                                  <p class="resume-text">At PT Solusi Kampus Indonesia my main task is to create product designs in the form of
+                                    website applications, mobile applications, and make analyzes related to user experience.
+                                    Apart from that, I also took part in the brainstorming process in determining the
+                                    direction of feature creation, such as in the process of validating the features to be
+                                    created, determining the level of priority scale and creating feature designs. At PT Solusi
+                                    Kampus Indonesia I learned a lot about how to manage design files so that everything
+                                    can be in sync with each other using design systems and libraries.</p>
                                 </div>
                                 <div class="resume-row">
                                   <h6 class="resume-type">UI Designer</h6>
-                                  <i class="resume-study">Harisenin.com<br>Jan 2022 - Mar 2022</i>
-                                  <p class="resume-text">At Harisenin.com I worked as an internship UI Designer, and I learned many things such as teamwork, time discipline, and how to work professionally. At Harisenin.com I do a lot of design projects for Harisenin.com products. In my work I use a lot of techniques that I learned, such as using grids, components, variants and making responsive designs.</p>
+                                  <i class="resume-study">PT Codemi Global<br>Jun 2022 - Apr 2023</i>
+                                  <p class="resume-text">At Codemi my main task is to design Codemi products in the form of website
+                                    applications and mobile applications. I use many of the techniques I learned, such as
+                                    grids, components, variants, auto layout, and responsive design. At Codemi I learned a
+                                    lot about how to manage design files so that everything can be in sync with each other
+                                    using design systems and libraries. Apart from that, I also created several graphic
+                                    designs for content marketing which were posted on various Codemi social media.</p>
                                 </div>
                               </div>
                             </div>
@@ -241,7 +252,7 @@
                         <div class="col-lg-6 offset-xl-1">
                           <div class="experience-box">
                             <div class="experience-content">
-                              <div class="experience-number">3</div>
+                              <div class="experience-number">4</div>
                               <div class="experience-info"><div>Years<br>Experience<br>Working</div></div>
                             </div>
                           </div>
